@@ -6,7 +6,7 @@
 
     <artifactId>PLPlusANZ</artifactId>
     <groupId>com.thomsonreuters.plplusanz</groupId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>1.0</version>
     <description>PPI ANZ Tests</description>
 
@@ -22,81 +22,102 @@
         <jenkinsStyleReports>true</jenkinsStyleReports>
         <routing>false</routing>
         <mergingAllModulesReports>true</mergingAllModulesReports>
+        <cobalt.users.xls.path>src/test/resources/CobaltUsers.xlsx</cobalt.users.xls.path>
     </properties>
 
-    <modules>
-        
-        <module>PPIANZ-Browse</module>
-        <!--
-        <module>PPIANZ-Delivery</module>
-        <module>PPIANZ-Document</module>
-        <module>PPIANZ-Favourite</module>
-        <module>PPIANZ-Folders</module>
-        <module>PPIANZ-Footer</module>
-        <module>PPIANZ-Glossary</module>
-        <module>PPIANZ-Header</module>
-        <module>PPIANZ-History</module>
-        <module>PPIANZ-LegalUpdate</module>
-        <module>PPIANZ-Linking</module>
-        <module>PPIANZ-Login</module>
-        <module>PPIANZ-Search</module>
-        <module>PPIANZ-PageObjects</module>
-        <module>PPIANZ-Widgets</module>
-        <module>PPIANZ-URLs</module>
-        -->
-    </modules>
+    <profiles>
+        <profile>
+            <id>jenkins</id>
+            <properties>
+                <cobalt.users.xls.path>C:/temp/CobaltUsers.xlsx</cobalt.users.xls.path>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>localhost</id>
+            <properties>
+                <base.url>localhost</base.url>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+
+        <profile>
+            <id>CI</id>
+            <properties>
+                <base.url>ci</base.url>
+                <base.legacy.url>124</base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>DEMO</id>
+            <properties>
+                <base.url>demo</base.url>
+                <base.legacy.url>100</base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>QED</id>
+            <properties>
+                <base.url>qed</base.url>
+                <base.legacy.url>100</base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>HOTPROD</id>
+            <properties>
+                <base.url>hotprod</base.url>
+                <base.legacy.url></base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>PROD</id>
+            <properties>
+                <base.url>prod</base.url>
+                <base.legacy.url></base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>PRODA</id>
+            <properties>
+                <base.url>prodA</base.url>
+                <base.legacy.url></base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>PRODB</id>
+            <properties>
+                <base.url>prodB</base.url>
+                <base.legacy.url></base.legacy.url>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>reporting</id>
+            <properties>
+                <jenkinsStyleReports>true</jenkinsStyleReports>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
-
         <plugins>
             <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
-                <executions>
-                    <execution>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -104,15 +125,53 @@
                 <version>1.2.1</version>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <phase>generate-test-resources</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
-                        <configuration>
-                            <mainClass>main.java.com.thomsonreuters.tests.ReportAccumulator</mainClass>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>com.thomsonreuters.driver.framework.BrowserCount</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
+                <configuration>
+                    <forkCount>${surefire.fork.count}</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useFile>false</useFile>
+                    <includes>
+                        <include>**/*Test.class</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <base.url>${base.url}</base.url>
+                        <driverType>${driverType}</driverType>
+                        <webdriver.chrome.driver>${chromeDriverPath}</webdriver.chrome.driver>
+                        <webdriver.ie.driver>${ieDriverPath}</webdriver.ie.driver>
+                        <browserStackLocal>${browserStackLocal}</browserStackLocal>
+                        <newSession>${newSession}</newSession>
+                        <username>None</username>
+                        <project>PLPlusANZ</project>
+                        <projectName>PLPlusANZ</projectName>
+                        <jenkinsStyleReports>${jenkinsStyleReports}</jenkinsStyleReports>
+                        <cobalt.users.xls.path>${cobalt.users.xls.path}</cobalt.users.xls.path>
+                        <routing>${routing}</routing>
+                    </systemPropertyVariables>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>2.18</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -120,21 +179,9 @@
     <dependencies>
         <dependency>
             <groupId>com.thomsonreuters.pageobjects</groupId>
-            <artifactId>PPIUK-pageobjects</artifactId>
-            <version>1a.0.1</version>
+            <artifactId>ppiuk-pageobjects</artifactId>
+            <version>1a.1.1</version>
         </dependency>
-      
-        <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-core</artifactId>
-            <version>3.0.3</version>
-        </dependency>
-
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-server-standalone</artifactId>
-        <version>2.47.0</version>
-      </dependency>
     </dependencies>
 
 </project>
